--- a/demo/demo-icheck.html
+++ b/demo/demo-icheck.html
@@ -38,7 +38,7 @@
 		<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
 		<!-- BetterXforms -->
-		<script src="assets/js/jquery.betterxforms.v1.0.js"></script>
+		<script src="../jquery.betterxforms.v1.0.js"></script>
 
 		<!-- iCheck -->
 		<script src="assets/iCheck/jquery.icheck.min.js"></script>
