--- a/demo/demo.html
+++ b/demo/demo.html
@@ -34,7 +34,7 @@
 		<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
 		<!-- BetterXforms -->
-		<script src="assets/js/jquery.betterxforms.v1.0.js"></script>
+		<script src="../jquery.betterxforms.v1.0.js"></script>
 
 		<!-- Demo with iCheck and a couple of iCheck features -->
 		<script>
